Δημιουργήθηκε με το Colaboratory

--- a/02_pytorch_neural_network_classification.ipynb
+++ b/02_pytorch_neural_network_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN9MaP+ZAlZ+6BQig3merO5",
+      "authorship_tag": "ABX9TyO8B99pnWZ78DiAlVDoMH/0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,7 +80,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_6oaZuJKGw6l",
-        "outputId": "061e0382-4862-4260-ff29-fe41c3d2e91e"
+        "outputId": "b5ae1d19-5e9f-4c54-ef2a-efffff9220be"
       },
       "execution_count": 2,
       "outputs": [
@@ -118,7 +118,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "68ba4933-024b-467f-ef94-27c4601e0d9f"
+        "outputId": "f03eafc5-eca6-4542-e8c3-2ef869b02ff2"
       },
       "execution_count": 3,
       "outputs": [
@@ -135,7 +135,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ec583b42-8d0b-43a0-9dcf-510cafb56f76\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-20013c94-16b0-41c0-afcb-4ee90e5ec84a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -196,7 +196,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ec583b42-8d0b-43a0-9dcf-510cafb56f76')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-20013c94-16b0-41c0-afcb-4ee90e5ec84a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -248,12 +248,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ec583b42-8d0b-43a0-9dcf-510cafb56f76 button.colab-df-convert');\n",
+              "        document.querySelector('#df-20013c94-16b0-41c0-afcb-4ee90e5ec84a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ec583b42-8d0b-43a0-9dcf-510cafb56f76');\n",
+              "        const element = document.querySelector('#df-20013c94-16b0-41c0-afcb-4ee90e5ec84a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -273,8 +273,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-f94b46a6-0fc0-4a03-9def-a6bc4b8ae72b\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f94b46a6-0fc0-4a03-9def-a6bc4b8ae72b')\"\n",
+              "<div id=\"df-b7dbfe81-10b3-48ab-8853-679b57ce567c\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b7dbfe81-10b3-48ab-8853-679b57ce567c')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -393,7 +393,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-f94b46a6-0fc0-4a03-9def-a6bc4b8ae72b button');\n",
+              "        document.querySelector('#df-b7dbfe81-10b3-48ab-8853-679b57ce567c button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -425,7 +425,7 @@
           "height": 447
         },
         "id": "wmkb82MGH40Z",
-        "outputId": "8f733ccd-e24c-4944-fe1b-02b684d4fd78"
+        "outputId": "c89ee298-228b-47d0-a87e-ba2594586e6e"
       },
       "execution_count": 4,
       "outputs": [
@@ -433,7 +433,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7a4e722ba680>"
+              "<matplotlib.collections.PathCollection at 0x7d50f97cb760>"
             ]
           },
           "metadata": {},
@@ -466,7 +466,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8f7837c4-c238-4266-ff43-35d6a21955ef"
+        "outputId": "43b3e2d6-dd84-4691-cb03-42bfa1951e2d"
       },
       "execution_count": 5,
       "outputs": [
@@ -501,7 +501,7 @@
           "height": 35
         },
         "id": "yR4AdYYuGC3U",
-        "outputId": "29179d85-910e-4c2c-d072-831d6de5dc25"
+        "outputId": "406c5b89-fe1d-447c-9946-ada4df11620f"
       },
       "execution_count": 6,
       "outputs": [
@@ -530,7 +530,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wbuXyr1NGAAL",
-        "outputId": "87b1d71c-26a3-46aa-9bc2-612a4948627c"
+        "outputId": "0727a7e4-f9ad-4ef3-c119-c57e282a340c"
       },
       "execution_count": 7,
       "outputs": [
@@ -569,7 +569,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L6QdS2gEGnrE",
-        "outputId": "c466ed5f-9ab8-4b35-ffa1-fb670e13ee91"
+        "outputId": "df1b7531-03bc-460a-ece7-87b21c679c9d"
       },
       "execution_count": 9,
       "outputs": [
@@ -617,7 +617,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vrHHuH7dHuXh",
-        "outputId": "56c94b4c-438a-41cd-9bcf-1f4670883bbb"
+        "outputId": "de46ac26-a2e5-4b6b-fdc6-cabe061b5ae7"
       },
       "execution_count": 11,
       "outputs": [
@@ -669,9 +669,9 @@
           "height": 35
         },
         "id": "-jGhW13kIuw6",
-        "outputId": "f7f3030e-355f-4cb6-d9de-59967662ffee"
+        "outputId": "3d6520a6-8aa6-4fc3-c40a-3649830e3941"
       },
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -684,7 +684,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 12
         }
       ]
     },
@@ -698,9 +698,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hLCVD6WzJhW7",
-        "outputId": "256df511-7ed3-4304-baef-9c527c63de87"
+        "outputId": "92588e3b-e47d-4231-833c-02da5d173f3e"
       },
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -716,7 +716,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 13
         }
       ]
     },
@@ -762,9 +762,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CmHobRaIKBdD",
-        "outputId": "64fd72c1-7fb4-4ddd-8545-bc48a965c167"
+        "outputId": "64ff7e99-9627-4ff4-d6ef-8c8378b2adc3"
       },
-      "execution_count": 18,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -777,7 +777,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 14
         }
       ]
     },
@@ -797,9 +797,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VLmh2U2ILvSy",
-        "outputId": "5bc4e30c-5195-47d4-eec2-a067cf65130a"
+        "outputId": "51c36448-65aa-425c-bbd5-169665f008ce"
       },
-      "execution_count": 21,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -812,7 +812,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 15
         }
       ]
     },
@@ -827,29 +827,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kwdwsnPXLxQ2",
-        "outputId": "5a027a1d-9cf1-42e7-8d7b-e6640cc68cba"
+        "outputId": "eeb7ec79-2403-424c-e9ff-c642c208c48f"
       },
-      "execution_count": 22,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "OrderedDict([('0.weight',\n",
-              "              tensor([[ 0.3230,  0.0762],\n",
-              "                      [ 0.5449,  0.4257],\n",
-              "                      [-0.1658, -0.2413],\n",
-              "                      [ 0.4368, -0.0538],\n",
-              "                      [-0.3647,  0.4467]], device='cuda:0')),\n",
+              "              tensor([[ 0.6014,  0.5749],\n",
+              "                      [ 0.6402,  0.1696],\n",
+              "                      [ 0.2868,  0.0086],\n",
+              "                      [-0.0214, -0.4430],\n",
+              "                      [-0.0291, -0.5159]], device='cuda:0')),\n",
               "             ('0.bias',\n",
-              "              tensor([-0.6832,  0.3095, -0.7029,  0.2709, -0.6142], device='cuda:0')),\n",
+              "              tensor([-0.3850, -0.0425,  0.4653, -0.2870,  0.5757], device='cuda:0')),\n",
               "             ('1.weight',\n",
-              "              tensor([[ 0.1272,  0.3929,  0.0126,  0.3610, -0.1794]], device='cuda:0')),\n",
-              "             ('1.bias', tensor([-0.0738], device='cuda:0'))])"
+              "              tensor([[-0.2795, -0.2732,  0.0131, -0.1199, -0.3275]], device='cuda:0')),\n",
+              "             ('1.bias', tensor([0.4303], device='cuda:0'))])"
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 16
         }
       ]
     },
@@ -867,9 +867,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p67j_0kBTZKD",
-        "outputId": "6c089599-1ee1-46cb-b3c4-d96bff6aef7e"
+        "outputId": "5fc9a12a-da32-4a4c-c9ae-22fc8986b373"
       },
-      "execution_count": 24,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -879,8 +879,230 @@
             "Length of test samples: 200, Shape: torch.Size([200, 2])\n",
             "\n",
             "First 10 predictions: \n",
-            "\n"
+            " tensor([[0.5346],\n",
+            "        [0.4111],\n",
+            "        [0.6266],\n",
+            "        [0.5095],\n",
+            "        [0.2586],\n",
+            "        [0.1860],\n",
+            "        [0.1299],\n",
+            "        [0.0762],\n",
+            "        [0.6420],\n",
+            "        [0.3988]], device='cuda:0')\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 2.1 Setup loss function and optimizer\n",
+        "\n",
+        "Which loss function or optimizer should you use?\n",
+        "\n",
+        "Again... this is problem specific.\n",
+        "\n",
+        "For example, for regression you might want MAE or MSE ( mean absolute error or mean squared error).\n",
+        "\n",
+        "For classification you might want binary cross entropy or categorical cross entropy.\n",
+        "\n",
+        "As a reminder, the loss function measures how *wrong* the model's predictions are.\n",
+        "\n",
+        "And for optimizers, two of the most common and useful are SGD and Adam, however PyTorch has a lot of built in.\n",
+        "\n",
+        "* For the loss function we're going to use `torch.nn.BCEWithLogitsLoss()`.\n"
+      ],
+      "metadata": {
+        "id": "9fbHNCFyS4jQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Setup the loss function\n",
+        "# loss_fn = nn.BCELoss() # requires inputs to have gone through the sigmoid activation function prior to input to BCELoss\n",
+        "\n",
+        "loss_fn = nn.BCEWithLogitsLoss() # has the sigmoid activation built in\n",
+        "\n",
+        "optimizer = torch.optim.SGD(params = model_0.parameters(),\n",
+        "                            lr = 0.1)"
+      ],
+      "metadata": {
+        "id": "2njBArl_Us2e"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate accuracy - out of 100 examples, what percentage does our model get right?\n",
+        "\n",
+        "def accuracy_fn(y_true, y_pred):\n",
+        "  correct = torch.eq(y.true, y_pred).sum().item()\n",
+        "  acc = (correct/len(y_pred)) * 100\n",
+        "  return acc"
+      ],
+      "metadata": {
+        "id": "y_whNU6eV0Az"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 3. Train model\n",
+        "\n",
+        "To train our model, we're going to need to build a training loop:\n",
+        "\n",
+        "1. Forward pass\n",
+        "2. Calculate the loss\n",
+        "3. Optimizer zero grad\n",
+        "4. Loss backward (backpropagation)\n",
+        "5. Optimizer step (gradient descent)"
+      ],
+      "metadata": {
+        "id": "b_Dbkd5Qwesx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 3.1 Going from raw logits -> prediction probabilities -> prediction labels\n",
+        "\n",
+        "Our model outputs are going to be raw **logits**.\n",
+        "\n",
+        "We can convert these **logits** into prediction probabilities by passing them to some kind of activation function (e.g. sigmoid for binary classification and softmax for multiclass classification)\n",
+        "\n",
+        "Then we can convert our model's prediction probabilities to **prediction labels** by either rounding them or taking the `argmax()`.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "6J41TUn3wyOG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# View the first 5 outputs of the forward pass on the test data\n",
+        "model_0.eval() # turn it into eval mode\n",
+        "with torch.inference_mode():\n",
+        "  y_logits = model_0(X_test.to(device))[:5]\n",
+        "y_logits\n",
+        "\n",
+        "# logits are the raw outputs of the model without being passed into activation functions. They are the unnormalized probabilities of the item belonging to a certain class.\n",
+        "# Logits are often used in classification tasks, where the goal is to predict the class label of an input."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AkGEFgWRxUJq",
+        "outputId": "f5f9bdf0-9527-4b34-cdf1-e9fbc82f63e0"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.5346],\n",
+              "        [0.4111],\n",
+              "        [0.6266],\n",
+              "        [0.5095],\n",
+              "        [0.2586]], device='cuda:0')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Use the sigmoid activation function on the model's logits\n",
+        "y_pred_probs = torch.sigmoid(y_logits)\n",
+        "y_pred_probs"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sZHvfZmyxjXi",
+        "outputId": "9e822ad4-786c-4d35-9eab-7bad364e991a"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.6306],\n",
+              "        [0.6014],\n",
+              "        [0.6517],\n",
+              "        [0.6247],\n",
+              "        [0.5643]], device='cuda:0')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "For our prediction probability values, we need to perform a range-style rounding on them:\n",
+        "\n",
+        "* `y_pred_probs` >= 0.5, `y=1` (class 1)\n",
+        "* `y_pred_probs` < 0.5, `y=0` (class 0)\n"
+      ],
+      "metadata": {
+        "id": "31FXovFMys5h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Find the predicted labels\n",
+        "y_preds = torch.round(y_pred_probs)\n",
+        "\n",
+        "# in full (logits->pred probs-> pred labels)\n",
+        "y_pred_labels = torch.round(torch.sigmoid(model_0(X_test.to(device))[:5]))\n",
+        "\n",
+        "# Check for equality\n",
+        "print(torch.eq(y_preds.squeeze(),y_pred_labels.squeeze()))\n",
+        "\n",
+        "#Get rid of extra dimension\n",
+        "y_preds.squeeze()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nMULEkIUykUE",
+        "outputId": "1d3f5de7-e552-49f3-c8fc-df07e69821d6"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([True, True, True, True, True], device='cuda:0')\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1., 1., 1., 1., 1.], device='cuda:0')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
         }
       ]
     },
@@ -888,7 +1110,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "9fbHNCFyS4jQ"
+        "id": "tNwBYksjypP-"
       },
       "execution_count": null,
       "outputs": []
