Loading All of Our Images and Turning Them Into Tensors With ImageFolder

--- a/04_pytorch_custom_datasets.ipynb
+++ b/04_pytorch_custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPxvdBQerBhDmxLoLp5jM/i",
+      "authorship_tag": "ABX9TyPdAKLVr3WB91gpomikJnFl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -603,37 +603,175 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "image_path_list[:10]"
+        "## 4. Option 1: Loading image using `ImageFolder`\n",
+        "\n",
+        "We can load image classification data using `torchvision.datasets.ImageFolder`"
       ],
       "metadata": {
-        "id": "qqDYZ_ddPxwN",
-        "outputId": "b5b95398-6812-40ff-dc74-4a9a1e071dc9",
+        "id": "qqDYZ_ddPxwN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Use ImageFolder to create dataset(s)\n",
+        "from torchvision import datasets\n",
+        "train_data = datasets.ImageFolder(root=train_dir,\n",
+        "                                  transform = data_transform, # transform for the data\n",
+        "                                  target_transform = None) # transform for the label/target\n",
+        "\n",
+        "test_data = datasets.ImageFolder(root = test_dir,\n",
+        "                                 transform = data_transform)\n",
+        "\n",
+        "train_data,test_data"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SKc9jZa7PzYb",
+        "outputId": "891373a2-9ab6-4c2b-c08c-9d690012110d"
       },
-      "execution_count": 71,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[PosixPath('data/pizza_steak_sushi/test/sushi/3806282.jpg'),\n",
-              " PosixPath('data/pizza_steak_sushi/test/sushi/2276986.jpg'),\n",
-              " PosixPath('data/pizza_steak_sushi/test/sushi/2540511.jpg'),\n",
-              " PosixPath('data/pizza_steak_sushi/test/sushi/1172255.jpg'),\n",
-              " PosixPath('data/pizza_steak_sushi/test/sushi/858157.jpg'),\n",
-              " PosixPath('data/pizza_steak_sushi/test/sushi/1680893.jpg'),\n",
-              " PosixPath('data/pizza_steak_sushi/test/sushi/684266.jpg'),\n",
-              " PosixPath('data/pizza_steak_sushi/test/sushi/3177743.jpg'),\n",
-              " PosixPath('data/pizza_steak_sushi/test/sushi/2385731.jpg'),\n",
-              " PosixPath('data/pizza_steak_sushi/test/sushi/499605.jpg')]"
+              "(Dataset ImageFolder\n",
+              "     Number of datapoints: 225\n",
+              "     Root location: data/pizza_steak_sushi/train\n",
+              "     StandardTransform\n",
+              " Transform: Compose(\n",
+              "                Resize(size=(64, 64), interpolation=bilinear, max_size=None, antialias=warn)\n",
+              "                RandomHorizontalFlip(p=0.5)\n",
+              "                ToTensor()\n",
+              "            ),\n",
+              " Dataset ImageFolder\n",
+              "     Number of datapoints: 75\n",
+              "     Root location: data/pizza_steak_sushi/test\n",
+              "     StandardTransform\n",
+              " Transform: Compose(\n",
+              "                Resize(size=(64, 64), interpolation=bilinear, max_size=None, antialias=warn)\n",
+              "                RandomHorizontalFlip(p=0.5)\n",
+              "                ToTensor()\n",
+              "            ))"
             ]
           },
           "metadata": {},
-          "execution_count": 71
+          "execution_count": 74
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_dir, test_dir"
+      ],
+      "metadata": {
+        "id": "o7N7xSNwUCMw",
+        "outputId": "b38d0a38-91ab-466f-a4c8-235e01e3eaaf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(PosixPath('data/pizza_steak_sushi/train'),\n",
+              " PosixPath('data/pizza_steak_sushi/test'))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 75
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get class names as a list\n",
+        "class_names = train_data.classes\n",
+        "class_names"
+      ],
+      "metadata": {
+        "id": "XdGiGNMxUNAD",
+        "outputId": "1513b8ba-7139-4558-82d7-3ed8c2eba57f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['pizza', 'steak', 'sushi']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get class names as a list\n",
+        "class_dict = train_data.class_to_idx\n",
+        "class_dict"
+      ],
+      "metadata": {
+        "id": "_yP7Sq5wUbc8",
+        "outputId": "f61a798b-c6a7-4ca0-e9e2-da17fbf5565b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'pizza': 0, 'steak': 1, 'sushi': 2}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check the lengths of our dataset\n",
+        "len(train_data), len(test_data)\n"
+      ],
+      "metadata": {
+        "id": "SyOPXSuiUkFw",
+        "outputId": "df4b7cbd-5ef1-4c90-fd8f-3705cd4c3f2a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(225, 75)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 79
         }
       ]
     },
@@ -641,7 +779,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "SKc9jZa7PzYb"
+        "id": "gDNTYcdsUvWD"
       },
       "execution_count": null,
       "outputs": []
